--- a/index.html
+++ b/index.html
@@ -97,6 +97,8 @@
                         </div>
                         <div class="resumeText">
                             <span>Sou apaixonado por matemática e computação desde muito jovem. Aos 16 anos, fui medalhista de ouro na Olimpíada Paranaense de Matemática e medalhista de bronze na Olimpíada Brasileira de Astronomia e Astrofísica.</span>
+                            <span>Embora desde os 15 anos já estudasse as bases matemáticas da computação, somente aos 18 anos comecei a programar. No começo, fiz programas simples para responder mensagens automaticamente e pequenos sites. Aos 20 anos, criei meu primeiro programa para o mercado financeiro, o Invester. Também com essa idade, criei a moneyCare, que é uma ferramenta online para gerenciamento financeiro.</span>
+                            <span>Tive que encerrar ambos os projetos por causa da faculdade, à qual precisava me dedicar em tempo integral. O mais breve possível, desejo colocar eles no ar novamente.</span>
                             <span>Além disso, gosto muito de aprender línguas: sou fluente em inglês, ao mesmo tempo que sou nível básico em espanhol, alemão, francês, italiano, grego e latim.</span>
                         </div>
                     </div>
