--- a/index.html
+++ b/index.html
@@ -72,7 +72,16 @@
                                 <img class="resumeBasicInfoIcon" src="./assets/python.png">
                                 <div class="loadingBar">
                                     <div class="loadingBackground">
-                                        <div id="pythonLoad" class="load" style="width: 60%;"></div>
+                                        <div id="pythonLoad" class="load" style="width: 80%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="resumeBasicSkill">
+                                <img class="resumeBasicInfoIcon" src="./assets/c.png">
+                                <div class="loadingBar">
+                                    <div class="loadingBackground">
+                                        <div id="cLoad" class="load" style="width: 30%;"></div>
                                     </div>
                                 </div>
                             </div>
@@ -81,7 +90,25 @@
                                 <img class="resumeBasicInfoIcon" src="./assets/html.png">
                                 <div class="loadingBar">
                                     <div class="loadingBackground">
-                                        <div id="htmlLoad" class="load" style="width: 70%;"></div>
+                                        <div id="htmlLoad" class="load" style="width: 90%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="resumeBasicSkill">
+                                <img class="resumeBasicInfoIcon" src="./assets/css.png">
+                                <div class="loadingBar">
+                                    <div class="loadingBackground">
+                                        <div id="cssLoad" class="load" style="width: 90%;"></div>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="resumeBasicSkill">
+                                <img class="resumeBasicInfoIcon" src="./assets/js.png">
+                                <div class="loadingBar">
+                                    <div class="loadingBackground">
+                                        <div id="jsLoad" class="load" style="width: 75%;"></div>
                                     </div>
                                 </div>
                             </div>
@@ -90,16 +117,17 @@
                                 <img class="resumeBasicInfoIcon" src="./assets/react.png">
                                 <div class="loadingBar">
                                     <div class="loadingBackground">
-                                        <div id="reactLoad" class="load" style="width: 45%;"></div>
+                                        <div id="reactLoad" class="load" style="width: 70%;"></div>
                                     </div>
                                 </div>
                             </div>
                         </div>
                         <div class="resumeText">
                             <span>Sou apaixonado por matemática e computação desde muito jovem. Aos 16 anos, fui medalhista de ouro na Olimpíada Paranaense de Matemática e medalhista de bronze na Olimpíada Brasileira de Astronomia e Astrofísica.</span>
-                            <span>Embora desde os 15 anos já estudasse as bases matemáticas da computação, somente aos 18 anos comecei a programar. No começo, fiz programas simples para responder mensagens automaticamente e pequenos sites. Aos 20 anos, criei meu primeiro programa para o mercado financeiro, o Invester. Também com essa idade, criei a moneyCare, que é uma ferramenta online para gerenciamento financeiro.</span>
-                            <span>Tive que encerrar ambos os projetos por causa da faculdade, à qual precisava me dedicar em tempo integral. O mais breve possível, desejo colocar eles no ar novamente.</span>
-                            <span>Além disso, gosto muito de aprender línguas: sou fluente em inglês, ao mesmo tempo que sou nível básico em espanhol, alemão, francês, italiano, grego e latim.</span>
+                            <span>Embora desde os 15 anos já estudasse as bases matemáticas da computação, somente aos 18 anos comecei a programar definitivamente. Após um ano, criei meu primeiro programa para o mercado financeiro, o Invester, e também a moneyCare, que é uma ferramenta online para gerenciamento financeiro.</span>
+                            <span>Em poucas semanas, mais de 500 usuários já usavam esses sistemas. Apesar disso, tive que encerrar ambos os projetos por causa da faculdade, à qual, na época, precisava me dedicar em tempo integral.</span>
+                            <span>Atualmente, estou fazendo modificações nesses sistemas para gerenciar a alta demanda. Em breve, pretendo disponibilizá-los novamente.</span>
+                            <span>Estudo na UTFPR, onde faço Sistemas de Informação.</span>
                         </div>
                     </div>
                 </div>
