--- a/index.html
+++ b/index.html
@@ -123,11 +123,10 @@
                             </div>
                         </div>
                         <div class="resumeText">
-                            <span>Sou apaixonado por matemática e computação desde muito jovem. Aos 16 anos, fui medalhista de ouro na Olimpíada Paranaense de Matemática e medalhista de bronze na Olimpíada Brasileira de Astronomia e Astrofísica.</span>
-                            <span>Embora desde os 15 anos já estudasse as bases matemáticas da computação, somente aos 18 anos comecei a programar definitivamente. Após um ano, criei meu primeiro programa para o mercado financeiro, o Invester, e também a moneyCare, que é uma ferramenta online para gerenciamento financeiro.</span>
-                            <span>Em poucas semanas, mais de 500 usuários já usavam esses sistemas. Apesar disso, tive que encerrar ambos os projetos por causa da faculdade, à qual, na época, precisava me dedicar em tempo integral.</span>
-                            <span>Atualmente, estou fazendo modificações nesses sistemas para gerenciar a alta demanda. Em breve, pretendo disponibilizá-los novamente.</span>
-                            <span>Estudo na UTFPR, onde faço Sistemas de Informação.</span>
+                            <span>No Hospital das Nações, atuava no setor da Qualidade, sendo inicialmente responsável pelas atividades básicas de manutenção, atualização e validação de todos os documentos utilizados e produzidos pela instituição; entretanto, pelo meu conhecimento em Python e C/C++, minhas atribuições mudaram e comecei a automatizar diversos processos do setor, tais quais envio de email, preenchimento de planilhas em Excel e Google Sheets, escrita e formatação de documentos em Word e Google Docs, criação e análise de diversos bancos de dados, geração de estatísticas, entre outros processos; e foram justamente essas automações, junto de desenvolvimento web, as atividades pelas quais fiquei responsável durante meu período profissional na UTFPR.</span>
+                            <span>Já na Employer, pude conhecer os sistemas Projudi, CPJ e PJe, com os quais tive acesso a uma área mais administrativa do Direito.</span>
+                            <span>Por fim, em computação, além de Python e C/C++, possuo experiência em HTML, CSS, JavaScript, NodeJS/Express, React e SQL. Sou fluente em inglês, ao mesmo tempo que ainda estudo e pratico alemão, francês, italiano, grego e latim.</span>
+                            <span>Estudo na Direito na UFPR.</span>
                         </div>
                     </div>
                 </div>
@@ -182,13 +181,13 @@
                         <div class="projectBox" style="background: rgb(255, 158, 27); color: rgb(255, 255, 255);">
                             <div class="projectBoxText">
                                 <div class="projectBoxTextPart">Universidade Tecnológica Federal do Paraná</div>
-                                <div class="projectBoxTextPart">03/2023 - 07/2023: cuidava de automações administrativas, principalmente de planilhas</div>
+                                <div class="projectBoxTextPart">03/2023 - 07/2023: cuidava de automações e de desenvolvimentos WEB</div>
                             </div>
                         </div>
                         <div class="projectBox" style="background: rgb(0, 61, 91); color: rgb(255, 255, 255);">
                             <div class="projectBoxText">
-                                <div class="projectBoxTextPart">WebHelp</div>
-                                <div class="projectBoxTextPart">07/2023 - 10/2023: responsável pelo suporte técnico de uma empresa bancária </div>
+                                <div class="projectBoxTextPart">Employer</div>
+                                <div class="projectBoxTextPart">01/2023 - 04/2023: estagiário na área de controladoria jurídica</div>
                             </div>
                         </div>
                     </div>
@@ -197,19 +196,6 @@
         </div>
 
         <div class="bottom">
-            <img src="https://chart.googleapis.com/chart?cht=qr&chl=http%3A%2F%2Fdraxter-07.github.io&chs=100x100&choe=UTF-8&chld=L|2">
-            <div class="ad">
-                <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3801473523911740" crossorigin="anonymous"></script>
-                <ins class="adsbygoogle"
-                    style="display:block"
-                    data-ad-format="fluid"
-                    data-ad-layout-key="-hu+4+18-27-l"
-                    data-ad-client="ca-pub-3801473523911740"
-                    data-ad-slot="9500113397"></ins>
-                <script>
-                    (adsbygoogle = window.adsbygoogle || []).push({});
-                </script>
-            </div>
         </div>
     </body>
 </html>
